--- a/VA/index.html
+++ b/VA/index.html
@@ -12,13 +12,9 @@
       <div class="do-pedido-ao-envio">do pedido ao envio</div>
       <div class="v">vã</div>
       <div class="rectangle-5"></div>            
-      <div class="rectangle-7"></div>
       <div class="rectangle-9"></div>
       <div class="rectangle-8"></div>
-      <div class="solicitar-compra">Solicitar Compra</div>
-      <div class="visite-nosso-estoque">visite nosso estoque</div>
       <div class="saiba-mais">Saiba Mais</div>
-      <div class="fale-com-a-v">Fale com a Vã</div>
       <div class="navigation-menu-and-content">
         <div class="navigation-menu-content">
           <div class="frame-6">
@@ -76,9 +72,10 @@
             </div>
           </div>
         </div>
+        <button class="rectangle-8"><a href="solicitar.html">solicitar</a></button>
+        <button class="rectangle-9"> <a href="fale.html">Fale com a SAP</a></button>
       </div>
     </div>
   </div>
-
 </body>
 </html>
